tests/baselines/reference/propertyAccess4.errors.txt
tests/cases/compiler/propertyAccess4.ts(1,1): error TS2531: 'null' is possibly 'null'.


==== tests/cases/compiler/propertyAccess4.ts (1 errors) ====
    null.toBAZ();
    ~~~~
!!! error TS2531: 'null' is possibly 'null'.